--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,10 @@ WORKDIR /app
 COPY frontend/package*.json ./
 RUN npm ci
 COPY frontend .
+ARG NEXT_PUBLIC_API_BASE_URL
+ARG NEXT_PUBLIC_STUDIO_URL
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL \
+    NEXT_PUBLIC_STUDIO_URL=$NEXT_PUBLIC_STUDIO_URL
 RUN npm run build
 
 # Run stage
