--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.441.0",
     "@openai/chatkit-react": "^0.2.0",
+    "sonner": "^1.5.0",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
