--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.30.1
 python-multipart==0.0.9
 pydantic==2.8.2
 requests==2.32.3
-openai>=1.40.0
+openai>=2.2,<3
 celery==5.4.0
 redis==5.0.7
 tenacity==8.4.2
@@ -12,4 +12,4 @@ SQLAlchemy==2.0.32
 psycopg2-binary==2.9.9
 google-generativeai>=0.7.0
 beautifulsoup4==4.12.3
-openai-chatkit>=0.2.0
+openai-chatkit==1.0.0
